--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.FeedBack"
         tools:targetApi="31">
         <activity
+            android:name=".MyApp"
+            android:exported="false" />
+        <activity
             android:name=".ThanksStudent"
             android:exported="false" />
         <activity
